--- a/styles/template1.css
+++ b/styles/template1.css
@@ -70,11 +70,11 @@ html {
 }
 
 #inicio .contenido header .contenido-header .redes a:hover {
-    color:#3fd0fc;
+    color:rgb(65, 40, 40);;
 }
 
 #inicio .contenido header .contenido-header .seleccionado {
-    color: #3fd0fc;
+    color: rgb(65, 40, 40);;
 }
 
 #inicio .contenido .presentacion {
@@ -103,7 +103,7 @@ html {
 
 #inicio .contenido .presentacion h2 span {
     font-size: 25px;
-    color:  #3fd0fc;
+    color:  rgb(65, 40, 40);
 }
 
 #inicio .contenido .presentacion .descripcion {
@@ -127,9 +127,28 @@ html {
 }
 
 #inicio .contenido .presentacion a:hover {
-    background-color:#3fd0fc;
+    background-color:rgb(65, 40, 40);
 }
+.presentacion{
 
+    display: flex;
+    flex-direction: wrap;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+
+}
+.foto-presentacion{
+    padding: 20px;
+    width: 50%;
+    border-radius: 30px;
+    background-color: white;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+
+}
 #icono-nav {
     color: #fff;
     display: none;
@@ -179,7 +198,7 @@ html {
 }
 
 #sobremi .sobremi h2 span {
-    color: #3fd0fc;
+    color:rgb(65, 40, 40);
 }
 
 #sobremi .sobremi h3 {
@@ -209,7 +228,7 @@ html {
 }
 
 #sobremi .sobremi a:hover {
-    background-color:#3fd0fc;
+    background-color:rgb(65, 40, 40);
     color: #fff;
 }
 /* *********************/
@@ -290,7 +309,7 @@ html {
 /* *********************/
 
 .contenedor-skills {
-    background: linear-gradient( #3fd0fc, rgba(33, 16, 16, 0.8)), url("img/fondo-skills.jpg");
+    background: linear-gradient( rgb(65, 40, 40), rgba(33, 16, 16, 0.8)), url("img/fondo-skills.jpg");
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
@@ -439,7 +458,7 @@ html {
     position: absolute;
     left: 0px;
     background-color: rgba(0, 0, 0, 0.8);
-    color: #3fd0fc;
+    color: rgb(65, 40, 40);
     width: 100%;
     padding: 10px;
     opacity: 0;
@@ -572,7 +591,7 @@ footer a {
         padding: 50px 0;
         display: block;
     }
-    #sobremi .contenedor-foto {
+    #sobremi .contenedor-foto,.foto-presentacion {
         max-width: 200px;
         margin: auto;
     }
