--- a/styles/template1.css
+++ b/styles/template1.css
@@ -58,7 +58,7 @@ html {
 }
 
 #inicio .contenido header .contenido-header nav ul li a:hover {
-    color:#3fd0fc;
+    color:rgba(0, 0, 0, .8);;
 }
 
 #inicio .contenido header .contenido-header .redes a {
@@ -70,14 +70,14 @@ html {
 }
 
 #inicio .contenido header .contenido-header .redes a:hover {
-    color:rgb(65, 40, 40);;
+    color:rgb(65, 40, 40);
 }
 
 #inicio .contenido header .contenido-header .seleccionado {
-    color: rgb(65, 40, 40);;
+    color: white;
 }
 
-#inicio .contenido .presentacion {
+#inicio .contenido  {
     max-width: 1100px;
     height: 100vh;
     margin: auto;
