v.5 personal webpage porfolio

--- a/styles/template1.css
+++ b/styles/template1.css
@@ -153,6 +153,10 @@ html {
     color: #fff;
     display: none;
 }
+.container{
+
+    border-radius: 20px;
+}
 /* *********************/
 /* seccion S O B R E  M I */
 /* *********************/
