v.10 personal webpage porfolio

--- a/styles/template1.css
+++ b/styles/template1.css
@@ -36,6 +36,7 @@ html {
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
+    height: 40px;
 }
 
 #inicio .contenido header .contenido-header h1 {
