--- a/styles/template4.css
+++ b/styles/template4.css
@@ -14,7 +14,7 @@ html {
 /* *********************/
 
 #inicio {
-  background: linear-gradient(rgb(0, 0, 7), rgba(0, 0, 0, 0.7));
+  background: linear-gradient(rgb(173, 113, 1),whitesmoke);
   background-size: cover;
   background-position: center center;
   height: 100vh;
